Align 'are you sure' and buttons right, fix height variation

--- a/res/css/views/elements/_EditableItemList.scss
+++ b/res/css/views/elements/_EditableItemList.scss
@@ -22,6 +22,7 @@ limitations under the License.
 .mx_EditableItem {
     display: flex;
     margin-bottom: 5px;
+    justify-content: flex-end;
 }
 
 .mx_EditableItem_delete {
@@ -43,17 +44,21 @@ limitations under the License.
 
 .mx_EditableItem_promptText {
     margin-right: 10px;
-    order: 2;
+    order: 1;
 }
 
 .mx_EditableItem_confirmBtn {
-    margin-right: 5px;
+    order: 2;
+    padding: inherit; // Override link height (!?)
+
+    &:not(:last-child) {
+        margin-right: 5px;
+    }
 }
 
 .mx_EditableItem_item {
     flex: auto 1 0;
     order: 1;
-    width: calc(100% - 14px); // leave space for the remove button
     overflow-x: hidden;
     text-overflow: ellipsis;
 }
